Fix Java 7 vs 8 issue